[project]
name = "query-agent"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "qingru97", email = "qingru97@gmail.com"},
]
dependencies = ["ollama>=0.4.7", "pytest>=8.3.5", "pydantic-settings>=2.8.1", "pydantic>=2.10.6", "huggingface-hub>=0.29.1", "numpy>=2.2.3", "smolagents>=1.9.2", "asyncio>=3.4.3", "litellm>=1.61.20"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python entry.py"
test = "pytest tests/"
working_dir = "."